# CMPUT350

350_2024/ecs/ecs_code/: .clang-tidy  .clangd  CMakeLists.txt
350_2024/ecs/ecs_code/tinyengine/: CMakeLists.txt
350_2024/ecs/ecs_code/tinyengine/components/: position.hpp  radius.hpp  render.hpp
350_2024/ecs/ecs_code/tinyengine/core/: component_array.h  component_manager.h  coordinator.h  engine.h  exception.cpp  exception.h  render.cpp  render.h  types.hpp
350_2024/examples/astar/: CMakeLists.txt  results.txt
350_2024/examples/astar/src/: CMakeLists.txt  astar.cpp  astar_consistent.cpp  astar_fast.cpp  astar_fast_template.cpp  base_game.h  sliding_puzzle.cpp  sliding_puzzle.h  util.h
350_2024/examples/debugging/: factorial.cpp  factorial_compile.sh  linked_list.cpp  linked_list_compile.sh  vec_find.cpp  vec_find_compile.sh  vec_index.cpp
350_2024/examples/graph_representation/: graph_adj.cpp  graph_mat.cpp  output.txt
350_2024/examples/optimization/: notes.txt
350_2024/examples/quad_tree/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  readme.md
350_2024/lecture_problems/week1/: count.cpp  count.py  nsieve.cpp  nsieve.py  q1.c  q2.c  q3.c  q4.cpp
350_2024/lecture_problems/week2/: q1.cpp  q2.cpp  q3.cpp  q4.cpp  q5.cpp  q6.cpp
350_2024/lecture_problems/week3/: q1.cpp  q2.cpp  (+1 more)
Assignments/Assignment 1/: CPoint.c  Point.cpp  Set.h  String.h  hexagons.cpp  mainSet.cpp  mainString.cpp
Assignments/Assignment 2/: ExperimentResults.csv  Experiments.txt  Marine.cpp  Marine.h  README.txt  Tank.cpp  Unit.h  World.cpp  World.h  main.py  problem2.fdb_latexmk  problem2.fls  problem2.tex  run_experiments.sh  simul
Assignments/Assignment 3/: Grid.cpp  Grid.h  GridInclude.h  GridPriv.h  Problem2.aux  Problem2.fdb_latexmk  Problem2.fls  Problem2.tex  README.txt  TestGrid.cpp  makefile  testGrid
C++ code/tinyengine/: .clang-format  CMakeLists.txt
Excercise/Debugging/: factorial.cpp  factorial_compile.sh  linked_list.cpp  linked_list_compile.sh  vec_find.cpp  vec_find_compile.sh  vec_index.cpp
Excercise/Optimizations/: analysis.txt  compile.sh  definitions.h  main.cpp  stonesngems.cpp  stonesngems.h  util.cpp  util.h
Excercise/quad_tree/: .clangd  CMakeLists.txt  readme.md
Excercise/quad_tree/src/: constants.h  main.cpp  quad_tree.h  types.h
Labs/lab0/: a.out  ex1.c  ex1buggy.c  ex2.c
(+355 files in other folders)
